css/settings.css
#settings_wrapper {
	position: absolute;
	left: 0;
	right: 0;
	top: 0;
	z-index: 10000;

	user-select: none;
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
}
.settings_layout {
	position: absolute;
	left: 0;
	right: 0;
	top: 0;
	min-height: 100vh;
	overflow: auto;
	display: -webkit-flex;
	display: flex;
	-webkit-align-items: center;
	align-items: center;
	-webkit-justify-content: center;
	justify-content: center;
	background: rgba(0, 0, 0, 0.9);

	font-size: 18px;
}
.settings_layout.settings_layout_displaymode {
	position: fixed;
	bottom: 0;
	background: none;
	-webkit-align-items: flex-end;
	align-items: flex-end;
}
.settings_layout.settings_layout_refereemode {
	background: none;
	-webkit-align-items: flex-end;
	align-items: flex-end;
}

.settings_container {
	position: relative;
	text-align: left;
	background: #fff;
	border-radius: 1em;
	padding: 0 2em 1em 2em;
	overflow: hidden;
}
.settings_layout_displaymode > .settings_container {
	background: rgba(255, 255, 255, 0.98);
}
.settings_container input,
.settings_container button {
	font-size: inherit;
}
.settings_container input[type="checkbox"] {
	height: 0.8em;
	width: 0.8em;
}
.settings_container h2 {
	margin: 0.5em 0 0.1em 0;
	font-size: 140%;
}

.setup_manual_discipline {
	padding-left: 0;
	padding-right: 0;
}
.setup_manual_discipline input {
	margin-left: 0;
}
.setup_manual_discipline > label + label {
	margin-left: 1.5em;
}

.settings_container label::before {
	/* Set line-height to height, so that we can vertically center with vertical-align: middle; */
	content: '';
	display: inline-block;
	height: 100%;
}
.settings_container label > * {
	vertical-align: middle;
}

.ingame_options {
	text-align: center;
}
.ingame_options > h2 {
	text-align: left;
}
.ingame_options > button {
	display: inline-block;
	font-size: 150%;
	padding: 0.1em;
	min-width: 10em;
	margin: 0.3em 0.2em;
	user-select: none;
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
}

.setup_manual_teams {
	margin-bottom: 0.5em;
}
.setup_manual_teams::after {
	/* Set line-height to height, so that we can vertically center with vertical-align: middle; */
	content: '';
	display: inline-block;
	height: 100%;
}
.setup_manual_teams > * {
	vertical-align: middle;
	display: inline-block;
}
.setup_manual_vs {
	text-align: center;
}
.setup_manual_team > div + div {
	margin-top: 0.5em;
}
.setup_manual_team > div > input {
	display: inline-block;
	margin: 0.25em 0 0.25em 0;
}

.setup_manual_details input[type="text"] {
	min-width: 17em;
}
.setup_manual_details th,
.setup_manual_details th {
	padding: 0.5em 0;
}
.settings_container button.setup_manual_start {
	font-size: 150%;
	padding: 0.1em 0.5em;
	margin: 0.4em 0;
	min-width: 10em;
}

#setup_manual_form th {
	text-align: left;
	padding-right: 0.2em;
}

.setup_loadmatch_list {
	margin: 0;
}
.load_match_link {
	display: inline-block;
	cursor: pointer;
	text-decoration: underline;
	color: blue;
	padding: 0.1em 0;
}
.button_delete > span {
	background-image: url(../icons/delete.svg);
}

.settings > label {
	display: block;
}
.settings > div,
.settings > label {
	padding: 0.3em 0 0.3em 0;
}
input[name="court_id"] {
	max-width: 3em;
}
.settings_language {
	min-width: 8em;
}

a.settings_mode_active:link,
a.settings_mode_active:visited {
	color: #000;
	font-weight: bold;
	text-decoration: none;
}
.settings_mode {
	margin: 1em 0 1em 0;
}
.settings_mode a {
	display: inline-block;
	margin: 0 0.6em;
}

.settings_footer {
	color: #ddd;
	text-align: right;
}
.settings_report_problem {
	display: inline-block;
	margin-right: 1em;
}

.settings div.settings_refmode_client_container {
	padding-left: 2em;
}

/* Smartphones */
@media screen and (max-width: 480px) {
	.settings_container {
		border-radius: 0;
		padding-left: 1em;
		padding-right: 1em;
	}
	.setup_manual_teams > * {
		display: block;
		width: 100%;
		text-align: center;
	}
	.setup_manual_team > div > input {
		width: 90%;
	}

	.setup_manual_details input[type="text"] {
		min-width: unset;
	}
	.setup_manual_teams::after {
		display: none;
	}
	.setup_manual_discipline {
		text-align: center;
	}
	.setup_manual_discipline > label + label {
		margin-left: 3em;
	}
	.setup_manual_start_container {
		text-align: center;
	}
}

@media screen and (max-width: 480px), screen and (max-height: 480px) {
	.ingame_options > h2 {
		display: none;
	}
}

